2010-04-09       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/configure.in:  corrected dates and added
	  test to detect presence of libpth.
	* gm2/gm2-libs/configure.in:  corrected test.
	* gm2/gm2-libs/configure:  rebuilt configure.
	* gm2/configure.in:  corrected release number.
	* gm2/configure:  rebuilt configure.
	* gm2/Make-lang.in:  added target.c to list of C files
	  to be built into the libgm2.a.  Added rules for all
	  combinations of supported flags.
	* gm2/configure:  rebuilt configure.
	* gm2/gm2-libs/configure.in:  added tests for math.h,
	  exp10, exp10f and exp10l.
	* gm2/gm2-libs/gm2-libs-host.h.in:  added entries for
	  HAVE_EXP10, HAVE_EXP10F and HAVE_EXP10L.

2010-04-08       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Quads.mod:  doIndrX (New Procedure).
	  Use doIndrX instead of GenQuad(IndrXOp..) to force conversion
	  of operands as they are dereferenced.  Fixes a bug reported
	  by Scott Iverson.
	  http://lists.gnu.org/archive/html/gm2/2010-04/msg00007.html

2010-04-07       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added GeneralUserExceptions.mod and
	  Processes.mod.
	* gm2/gm2.texi:  corrected startup filename.
	* gm2/gm2-compiler/M2Quads.mod:  call SkipType when checking
	  procedure parameters (CheckProcTypeAndProcedure).
	* gm2/gm2-libs/Assertion.def:  added space.
	* gm2/gm2-libs/Assertion.mod:  corrected copyright notice
	  and altered halt message.
	* gm2/gm2-libs/RTExceptions.def:  SetExceptionSource,
	  GetExceptionSource (New Procedures).
	* gm2/gm2-libs/RTExceptions.mod:  implement SetExceptionSource
	  and GetExceptionSource.
	* gm2/gm2-libs/SYSTEM.mod:  removed commented out redundant
	  comment __INLINE__.
	* gm2/gm2-libs-iso/COROUTINES.mod:  TRANSFER and initMain
	  must save and restore the ExceptionBlock, ExceptionState
	  and ExceptionSource.
	* gm2/gm2-libs-iso/EXCEPTIONS.mod:  use RTExceptions to retrieve
	  the ExceptionSource associated with the current COROUTINE to