@@ -1,3 +1,9 @@
+2010-04-10       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gccgm2.c:  fixed a bug reported by Scott Iverson
+	  http://lists.gnu.org/archive/html/gm2/2010-04/msg00002.html.
+	  Converted index and low to the pointer type before subtraction.
+
 2010-04-09       Gaius Mulley <gaius@gnu.org>
 
 	* gm2/gm2-libs/configure.in:  corrected dates and added
